# advies_agent

./: .dockerignore  .geminiignore  .gitignore  DOCKER_SETUP.md  Dockerfile  claude.md  dev.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  implementation_plan_template.md  langchain.md  main.py  mcp_server_installation_guide.md  model_apis.txt  orchestrator.ipynb  orchestrator_dataflow.md  personal_instructions_commandline.txt  prod.sh  pyproject.toml  react.ipynb  retriever.ipynb  test_regions.py
src/database/: Dockerfile  SYNC_HANDLEIDING.md  __init__.py  connection.py  models.py  pyproject.toml  repository.py
src/database/data_preprocessor/: __main__.py  preprocessor.py  testing.ipynb
src/database/data_preprocessor/pricing/: calculator.py  loaders.py
src/database/docker/db_init/: 02_create_metabase_db.sql
src/database/import_data/: regio_mapping.xlsx
src/database/src/: entrypoint.sh  instructions.md
src/database/src/comparator_app/: admin.py  api_assuportal.py  api_egrip.py  api_excel.py  api_excel_allianz.py  api_excel_ao.py  api_excel_belgie.py  api_excel_engels.py  api_excel_woning.py  models.py  notebook.ipynb  schemas_allianz.py  schemas_ao.py  schemas_assuportal.py  schemas_belgie.py  schemas_egrip.py  schemas_engels.py  schemas_woning.py  sync_monitoring.py  urls.py  webhook_grip.py
src/database/src/comparator_app/management/commands/: analyze_conversions.py  import_country_regions.py  import_excel_ao.py  (+7 more)
src/database/src/comparator_app/migrations/: 0001_initial.py  0002_alter_contracten_contract_id_and_more.py  0003_adviesaanvragen_new.py  0004_remove_adviesaanvragen_bestemmings_land_code_and_more.py  0005_bedrijfsregels_verzekeringdoelgroepen_verzekeringen_and_more.py  0006_add_readable_views.py  0007_add_omschrijving_to_contracten.py  0008_remove_relaties_source.py  0009_increase_field_limits.py  0010_adviesaanvraagengels.py  0011_adviesaanvraagbelgie.py  0012_adviesaanvraagwoning.py  0013_offertearbeidsongeschiktheid.py  0014_allianzcarequote.py
src/database/src/expat_project/: settings.py  urls.py
(+380 files in other folders)
