[project]
name = "advies-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.7.3",
    "ipykernel>=7.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "pydantic>=2.12.3",
    "qdrant-client>=1.15.1",
]
