[project]
name = "advies-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "crawl4ai>=0.4.25",
    "dotenv>=0.9.9",
    "fastembed>=0.7.3",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "langchain>=1.0.2",
    "langchain-classic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "qdrant-client>=1.15.1",
    "seaborn>=0.13.2",
]
