[project]
name = "expat-insurance-platform"
version = "0.1.0"
description = "Expat Insurance Configurator & Comparison Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.1.7",
    "psycopg[binary]>=3.1.0",
    "python-decouple==3.8",
    "django-smart-selects",
    "django-extensions",
    "ipython",
    "pydantic[email]>=2.12.0",
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
    "dotenv>=0.9.9",
    "pytz>=2025.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "python-calamine>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "isort",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
